@@ -127,6 +127,17 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>3.2.5</version>
+                <configuration>
+                    <argLine>
+                        --add-opens auction/auction.client.controllers=org.junit.platform.commons
+                        --add-opens auction/auction.server=org.junit.platform.commons
+                    </argLine>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
